<resources>
    <string name="app_name">一起装修</string>
    <string name="homepage_text_tab">首页</string>
    <string name="ownersay_text_tab">业主说</string>
    <string name="message_text_tab">消息</string>
    <string name="personagw_text_tab">我的</string>
    <string name="title_company">装修公司</string>
    <string name="title_activities">同城活动</string>
    <string name="title_school">装修学堂</string>
    <string name="title_budget">装修预算</string>
    <string name="title_fitment">建材家具</string>
    <string name="title_effect">效果图</string>
    <string name="title_booking">自助下单</string>
    <string name="title_design">设计量房</string>
    <string name="_677_m">677元/m²</string>
    <string name="new_house">新房装修</string>
    <string name="old_house">老房装修</string>
    <string name="old_price">677+117元/m²</string>
    <string name="workspace">看现场</string>
    <string name="workspace_playing">工地直播</string>
    <string name="together_team">一起团队</string>
    <string name="compan_decorator">装修公司</string>
    <string name="yuyue">我要预约</string>
    <string name="online_answer">在线答疑</string>
    <string name="noMoreDate">没有更多数据</string>
    <string name="desing_name">汪洋</string>
    <string name="design_tag">设计师</string>
    <string name="decroate_explem">装修案例：</string>
    <string name="homepage_post">精选自%1$s></string>
    <string name="noMoreData">没有更多数据了哟 ~</string>
    <string name="restoreData">加载失败，点击重试</string>
    <string name="search_info">搜索用户/帖子</string>
    <string name="location_citiname">北京</string>
    <string name="caseNumber">装修案例：%1$s</string>
    <string name="personanli">装修案例(%1$s)</string>
    <string name="worknews">工地消息：%1$s</string>
    <string name="likeinfi_postdetails">赞(%1$d)</string>
    <string name="comments_postdetails">回帖(%1$d)</string>
    <string name="house_classify">%1$s室%2$s厅</string>
    <string name="house_area">%1$d平</string>
    <string name="house_budget">%1$s万</string>
    <string name="design_popupwindow_text">预付款抵货款活动</string>
    <string name="design_popupwindow_text_main">只要支付￥200定金，即可在转单时抵￥500使用</string>
    <string name="design_popupwindow_text_other">注：未使用前可随意退款，退款金额将直接返回原账户。只适用于整装套餐，支付成功后在我的订单里查看，转单时把订单出示给工作人员即可。</string>
    <string name="design_popupwindow_text_button">预约支付</string>
    <string name="booking_head_text">一起网保障</string>
    <string name="booking_head_select_refund">一键退款</string>
    <string name="booking_head_select_security">正品保障</string>
    <string name="booking_head_select_compensate">先行赔付</string>
    <string name="booking_head_select_floorprice">同城最低</string>
    <string name="booking_gridview_item_info">敬请期待</string>
    <string name="booking_tablayout_firsttext">全部</string>
    <string name="booking_title_text">自助下单</string>
    <string name="booking_popupwindow_title">服务说明</string>
    <string name="booking_head_select_refund_description">12个月内无理由退换货，手机下单方便又快捷(仅限转单前)</string>
    <string name="booking_head_select_security_description">严把质量关，网站为每一件商品担保</string>
    <string name="booking_head_select_compensate_description">商品质量问题，网站先行赔付，购物无担忧</string>
    <string name="booking_head_select_floorprice_description">全城，全网最低价，倍补差价</string>
    <string name="network_result_null">网络连接出现错误</string>
    <string name="no_comments_text">目前还没有任何评论！</string>
    <string name="related_articledetails_text">相关文章推荐</string>
    <string name="comment_articledetails_text">评论(%1$s)</string>
    <string name="nocomment_articledetails">暂无评论</string>
    <string name="nomorecomment_articledetails">没有更多评论了</string>
    <string name="timeatamp_minutes_ago">%1$s分钟前</string>
    <string name="timeatamp_hours_ago">%1$s小时前</string>
    <string name="timeatamp_days_ago">%1$s天前</string>
    <string name="timeatamp_jsut_now">刚刚</string>
    <string name="img_position_popupwindow_postdetails">%1$d/%2$d</string>
    <string name="last_refresh_time">上次更新:%1$s</string>
    <string name="cancel">取消</string>
    <string name="guide_realize">让我们花10秒钟了解你</string>
    <string name="guide_hint">以便发现您最需要的装修内容</string>
    <string name="guide_check_sex">选择性别:</string>
    <string name="guide_check_sex_man">男</string>
    <string name="guide_check_sex_woman">女</string>
    <string name="guide_check_progress">装修进度:</string>
    <string-array name="location">
        <item>北京</item>
        <item>天津</item>
        <item>上海</item>
        <item>石家庄</item>
        <item>西安</item>
        <item>武汉</item>
        <item>成都</item>
        <item>哈尔滨</item>
        <item>大连</item>
        <item>济南</item>
    </string-array>
    <string-array name="numberToLetter">
        <item>一</item>
        <item>两</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>
    <string-array name="schollTitle">
        <item>验房收房</item>
        <item>装修公司</item>
        <item>量房设计</item>
        <item>辅材选购</item>
        <item>主材选购</item>
        <item>家具选购</item>
        <item>装修合同</item>
        <item>主体拆迁</item>
        <item>水电改造</item>
        <item>防水处理</item>
        <item>木工工程</item>
        <item>瓦工工程</item>
        <item>油工工程</item>
        <item>主材安装</item>
        <item>竣工验收</item>
        <item>软装配饰</item>
        <item>居家生活</item>
    </string-array>
</resources>
