<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="110dp">
        <LinearLayout
            android:orientation="vertical"
            android:id="@id/new_house_decorate"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:layout_marginTop="10dp"
                android:src="@drawable/new_house_icon"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/_677_m"
                android:textColor="#009f51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/new_house"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <View
            android:background="#c7c1c1"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@id/old_house_decorate"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:layout_marginTop="10dp"
                android:src="@drawable/old_house_icon"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/old_price"
                android:textColor="#009f51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/old_house"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>