<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/popupwindow_design"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <View
                android:layout_width="0dp"
                android:layout_height="2px"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/design_popupwindow_text"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="2px"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <TextView
            android:id="@id/design_popupwindow_textview_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/design_popupwindow_text_main"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/design_popupwindow_text_other"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/popupwindow_design_click_bg"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/design_popupwindow_text_button"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>