<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:id="@id/linear_look_up_work"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/look_site_playing_icon"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/workspace" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="80dp"
        android:background="#d7d4d4" />

    <LinearLayout
        android:id="@id/image_site_playing"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/site_playing_icon"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/workspace_playing" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="80dp"
        android:background="#d7d4d4" />

    <LinearLayout
        android:id="@id/linear_yiqi_team"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/yiqi_group_icon"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/together_team" />
    </LinearLayout>

</LinearLayout>